# app-space-android

./: CHANGELOG.md  JitPackUpload.gradle  README.md  README_ZH.md  gradle.properties  settings.gradle  versions.gradle
.github/workflows/: package.yml  release.yml
app/: build.gradle  proguard-rules.pro  seeds.txt  unused.txt
app-space-android/src/main/: AndroidManifest.xml
app-space-android/src/main/java/com/appspace/update/: AppSpace.java  UpdateManager.java  _AppSpace.java
app-space-android/src/main/res/layout/: xupdate_dialog_update.xml  xupdate_layout_update_prompter.xml
app-space-android/src/main/res/layout-land/: xupdate_layout_update_prompter.xml
app-space-update/: build.gradle
app-space-update/src/main/: AndroidManifest.xml
app-space-update/src/main/cpp/: CMakeLists.txt  patch-lib.cpp  patchUtils.c  patchUtils.h
app-space-update/src/main/java/com/appspa/update/: AppSpace.java  UpdateManager.java  _AppSpace.java
app-space-update/src/main/res/drawable/: spa_bg_app_info.xml  spa_icon_app_close.xml
app-space-update/src/main/res/layout/: spa_dialog_update.xml  spa_layout_update_prompter.xml  xupdate_dialog_update.xml  xupdate_layout_update_prompter.xml
app-space-update/src/main/res/layout-land/: spa_layout_update_prompter.xml  xupdate_layout_update_prompter.xml
app-space-update/src/main/res/values/: spa_colors.xml  spa_dimens.xml  spa_strings.xml  spa_style_widget.xml
app-space-update/src/main/res/values-en-rUS/: spa_strings.xml
app-space-update/src/main/res/values-zh-rCN/: spa_strings.xml
app/src/androidTest/java/com/appspa/demo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/appspa/xupdatedemo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/appspace/xupdatedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/appspa/demo/: App.java  Constants.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
jsonapi/: update_custom.json  update_forced.json  update_ignore.json  update_test.json  update_test1.json
(+162 files in other folders)
